--- a/demo/index.html
+++ b/demo/index.html
@@ -109,6 +109,16 @@
         </gig-select>
     </div>
 
+    <div class="field">
+        <label>Select multiple with values selected and format value-array</label>
+        <gig-select label="Select a city" value="barcelona,madrid,malaga" multiple value-array>
+            <option value="malaga">Málaga</option>
+            <option value="madrid">Madrid</option>
+            <option value="barcelona">Barcelona</option>
+            <option value="valencia">Valencia</option>
+        </gig-select>
+    </div>
+
 </body>
 
 </html>
