--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.11 - 2016-03-15
+ @version v0.0.12 - 2016-03-17
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -276,12 +276,25 @@
 
         <iron-overlay-backdrop hidden$="{{!showSelect}}" id="overlay" on-click="hideSelect"></iron-overlay-backdrop>
 
-        <input type="hidden"
-               id="input"
-               required$="[[required]]"
-               disabled$="[[disabled]]"
-               name$="[[name]]"
-               value="{{itemSelected.value}}">
+        <template is="dom-if" if="{{!valueArray}}">
+            <input type="hidden"
+                   id="input"
+                   required$="[[required]]"
+                   disabled$="[[disabled]]"
+                   name$="[[name]]"
+                   value="{{itemSelected.value}}">
+        </template>
+
+        <template is="dom-if" if="{{valueArray}}">
+            <template is="dom-repeat" items="{{arrayItemsSelected}}">
+                <input type="hidden"
+                       id="input"
+                       required$="[[required]]"
+                       disabled$="[[disabled]]"
+                       name$="[[name]][]"
+                       value="{{item.value}}">
+           </template>
+        </template>
 
         <template is="dom-if" if="[[errorMessage]]">
             <div class="error small">[[errorMessage]]</div>
@@ -574,6 +587,10 @@
                         value: false
                     },
                     sortable: {
+                        type: Boolean,
+                        value: false
+                    },
+                    valueArray: {
                         type: Boolean,
                         value: false
                     }
