feat(component): rework

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>Gig Component fieldMap Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
-    <link rel="import" href="/demo/gig-select.html">
+    <link rel="import" href="../src/gig-select.html">
 
     <style is="custom-style">
         body {
