--- a/src/sortableBehavior.html
+++ b/src/sortableBehavior.html
@@ -3,7 +3,7 @@
 <script>
   /**
    * description
-   * polymerBehavior SortableBehavior
+   * @polymerBehavior SortableBehavior
    *
    * @type {{initSortable: SortableBehavior.initSortable, showSortable: SortableBehavior.showSortable, sortableEndListener: SortableBehavior.sortableEndListener, updateValues: SortableBehavior.updateValues, properties: {listSortable: {type: String}}}}
    */
