--- a/sortableBehavior.html
+++ b/sortableBehavior.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.12 - 2016-07-22
+ @version v0.0.12 - 2016-08-01
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -11,7 +11,7 @@
 <script>
   /**
    * description
-   * polymerBehavior SortableBehavior
+   * @polymerBehavior SortableBehavior
    *
    * @type {{initSortable: SortableBehavior.initSortable, showSortable: SortableBehavior.showSortable, sortableEndListener: SortableBehavior.sortableEndListener, updateValues: SortableBehavior.updateValues, properties: {listSortable: {type: String}}}}
    */
