--- a/src/gig-select.html
+++ b/src/gig-select.html
@@ -20,7 +20,7 @@
         <span hidden$="[[showLabel(itemSelected, multipleClass)]]">[[label]]</span>
         <iron-icon icon="fa:angle-down"></iron-icon>
       </div>
-      <ul class$="[[showSelect]]" style$="{{getHeight(height)}}">
+      <ul class$="[[showSelect]]" style$="{{getHeight(height)}}" hidden$="{{!showSelect}}">
         <template is="dom-if" if="[[search]]">
           <div class="search">
             <input type="search" value="{{filterVal::input}}">
@@ -106,8 +106,87 @@
           Polymer.IronValidatableBehavior,
           SortableBehavior
         ],
+        properties: {
+          items: {
+            type: Array,
+            value: function() {
+              return []
+            },
+            notify: true,
+            observer: 'changeArray'
+          },
+          itemSelected: {
+            type: Object,
+            notify: true,
+            observer: '_changeValue'
+          },
+          arrayItemsSelected: {
+            type: Array,
+            value: function() {
+              return []
+            }
+          },
+          value: {
+            type: String,
+            reflectToAttribute: true,
+            notify: true
+          },
+          multiple: {
+            type: Boolean
+          },
+          errorMessage: {
+            type: String,
+            value: ''
+          },
+          disabled: {
+            type: Boolean,
+            value: false
+          },
+          checkSelectAll: {
+            type: Boolean,
+            value: false
+          },
+          html: {
+            type: Boolean,
+            value: false
+          },
+          multipleClass: {
+            type: Boolean,
+            value: false
+          },
+          search: {
+            type: Boolean,
+            value: false
+          },
+          sortable: {
+            type: Boolean,
+            value: false
+          },
+          valueArray: {
+            type: Boolean,
+            value: false
+          },
+          selectAll: {
+            type: Boolean
+          },
+          label: {
+            type: String,
+            notify: true,
+            value: ''
+          },
+          filterVal: {
+            type: String
+          }
+        },
+        keyBindings: {
+          'up down': 'open',
+          'esc': 'close'
+        },
         changeEvent: function() {
 
+        },
+        showSelect: function() {
+            console.log('show Select');
         },
         ready: function() {
           this.items = this.getInitialContent();
@@ -229,7 +308,7 @@
           this._changeArrayValues();
         },
         clickItem: function() {
-          this.showSelect = 'show';
+          this.showSelect = this.showSelect ? null : 'show';
         },
         hideSelect: function() {
           this.showSelect = null;
@@ -290,8 +369,6 @@
               object.label += this.arrayItemsSelected[i].label + ',';
               object.value += this.arrayItemsSelected[i].value + ',';
             }
-
-            object.label = object.label;
             object.value = object.value.substring(0, object.value.length - 1);
 
             this.itemSelected = object;
@@ -311,78 +388,6 @@
           if (value.length > 0) {
             this.set('items', value);
             this.checkSelected();
-          }
-        },
-        properties: {
-          items: {
-            type: Array,
-            value: function() {
-              return []
-            },
-            notify: true,
-            observer: 'changeArray'
-          },
-          itemSelected: {
-            type: Object,
-            notify: true,
-            observer: '_changeValue'
-          },
-          arrayItemsSelected: {
-            type: Array,
-            value: function() {
-              return []
-            }
-          },
-          value: {
-            type: String,
-            reflectToAttribute: true,
-            notify: true
-          },
-          multiple: {
-            type: Boolean
-          },
-          errorMessage: {
-            type: String,
-            value: ''
-          },
-          disabled: {
-            type: Boolean,
-            value: false
-          },
-          checkSelectAll: {
-            type: Boolean,
-            value: false
-          },
-          html: {
-            type: Boolean,
-            value: false
-          },
-          multipleClass: {
-            type: Boolean,
-            value: false
-          },
-          search: {
-            type: Boolean,
-            value: false
-          },
-          sortable: {
-            type: Boolean,
-            value: false
-          },
-          valueArray: {
-            type: Boolean,
-            value: false
-          },
-          selectAll: {
-            type: Boolean
-          },
-          label: {
-            type: String,
-            notify: true,
-            value: ''
-          },
-          filterVal: {
-            type: String
           }
         }
       })
