--- a/demo/index.html
+++ b/demo/index.html
@@ -1,133 +1,145 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="fragment" content="!">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta name="mobile-web-app-capable" content="yes">
-    <title>Gig Component fieldMap Demo</title>
-    <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
-    <link rel="import" href="../src/gig-select.html">
+  <meta charset="utf-8">
+  <meta name="fragment" content="!">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <meta name="mobile-web-app-capable" content="yes">
+  <title>Gig Component fieldMap Demo</title>
+  <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
+  <link rel="import" href="../src/gig-select.html">
 
-    <style is="custom-style">
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-        }
+  <style is="custom-style">
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
 
-        .field {
-            padding: 10px;
-        }
+    .field {
+      padding: 10px;
+    }
 
-        label {
-            display: block;
-            padding-bottom: 5px;
-        }
+    label {
+      display: block;
+      padding-bottom: 5px;
+    }
 
-        .box .image {
-            width: 50px;
-            height: 50px;
-            float: left;
-        }
+    .box .image {
+      width: 50px;
+      height: 50px;
+      float: left;
+    }
 
-        .box .image img {
-            width: 100%;
-            height: 100%;
-        }
+    .box .image img {
+      width: 100%;
+      height: 100%;
+    }
 
-        .box:after {
-            visibility: hidden;
-            display: block;
-            font-size: 0;
-            content: " ";
-            clear: both;
-            height: 0;
-        }
+    .box:after {
+      visibility: hidden;
+      display: block;
+      font-size: 0;
+      content: " ";
+      clear: both;
+      height: 0;
+    }
 
-    </style>
+  </style>
 </head>
 <body>
 
-    <div class="field">
-        <label>Select with label</label>
-        <gig-select label="Select a city">
-            <option value="malaga">Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select with label</label>
+  <gig-select label="Select a city">
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-      <label>Select with search</label>
-      <gig-select label="Select a city" search>
-        <option value="malaga">Málaga</option>
-        <option value="madrid">Madrid</option>
-        <option value="barcelona">Barcelona</option>
-        <option value="valencia">Valencia</option>
-      </gig-select>
-    </div>
+<div class="field">
+  <label>Select with search</label>
+  <gig-select label="Select a city" search>
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select with one value</label>
-        <gig-select label="Select a city">
-            <option value="malaga" selected>Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select with one value</label>
+  <gig-select label="Select a city">
+    <option value="malaga" selected>Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select with value select</label>
-        <gig-select label="Select a city" multiple>
-            <option value="malaga" selected>Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select with value select</label>
+  <gig-select label="Select a city" multiple>
+    <option value="malaga" selected>Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select multiple with class multiple</label>
-        <gig-select label="Select a city" multiple multiple-class>
-            <option value="malaga">Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select multiple with class multiple</label>
+  <gig-select label="Select a city" multiple multiple-class>
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select multiple with class multiple and sortable</label>
-        <gig-select label="Select a city" multiple multiple-class sortable>
-            <option value="malaga">Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select multiple with class multiple and sortable</label>
+  <gig-select label="Select a city" multiple multiple-class sortable>
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select multiple with values selected and class multiple and sortable</label>
-        <gig-select label="Select a city" value="barcelona,madrid,malaga" multiple multiple-class sortable>
-            <option value="malaga">Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select multiple with values selected and class multiple and sortable</label>
+  <gig-select label="Select a city" value="barcelona,madrid,malaga" multiple multiple-class sortable>
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
 
-    <div class="field">
-        <label>Select multiple with values selected and format value-array</label>
-        <gig-select label="Select a city" value="barcelona,madrid,malaga" multiple value-array>
-            <option value="malaga">Málaga</option>
-            <option value="madrid">Madrid</option>
-            <option value="barcelona">Barcelona</option>
-            <option value="valencia">Valencia</option>
-        </gig-select>
-    </div>
+<div class="field">
+  <label>Select multiple with values selected and format value-array</label>
+  <gig-select label="Select a city" value="barcelona,madrid,malaga" multiple value-array>
+    <option value="malaga">Málaga</option>
+    <option value="madrid">Madrid</option>
+    <option value="barcelona">Barcelona</option>
+    <option value="valencia">Valencia</option>
+  </gig-select>
+</div>
+
+<div class="field">
+  <label>Select multiple with values selected with select all and unselect option</label>
+  <gig-select label="Select a city" search required name="whatever"
+    multiple select-all="select all bitch"
+    value="porto" unselect-all="unselect all bitch">
+    <option value="porto">Porto</option>
+    <option value="lisbon">Lisbon</option>
+    <option value="Coimbra">Coimbra</option>
+    <option value="faro">Faro</option>
+  </gig-select>
+</div>
 
 </body>
 
