--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.1.1 - 2016-08-02
+ @version v0.1.1 - 2016-08-04
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -175,7 +175,7 @@
             value: false
           },
           selectAll: {
-            type: Boolean
+            type: String
           },
           label: {
             type: String,
