--- a/src/gig-select.html
+++ b/src/gig-select.html
@@ -167,7 +167,7 @@
             value: false
           },
           selectAll: {
-            type: Boolean
+            type: String
           },
           label: {
             type: String,
