fix(component): space in object label

--- a/demo/index.html
+++ b/demo/index.html
@@ -141,6 +141,60 @@
   </gig-select>
 </div>
 
+<div class="field">
+  <label>Select a value - using gig-html</label>
+  <gig-select class="add-block" label="wowoow" html>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+    <option value="porto" label="porto label">Porto</option>
+    <option value="lisbon" label="lisbon label">Lisbon</option>
+    <option value="Coimbra" label="coimbra label">Coimbra</option>
+    <option value="faro" label="faro labal">Faro</option>
+  </gig-select>
+</div>
+
 </body>
 
 </html>
