--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.1.1 - 2016-08-04
+ @version v0.1.2 - 2016-08-22
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -13,6 +13,7 @@
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
 <link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+<link rel="import" href="../iron-scroll-target-behavior/iron-scroll-target-behavior.html">
 <link rel="import" href="sortableBehavior.html">
 
 <link rel="import" href="gig-select-style.html">
@@ -22,13 +23,14 @@
     <style include="gig-select-style"></style>
 
     <content select="option" id="c" hidden$="{{contentHidden}}"></content>
+
     <div class="select">
       <div on-click="clickItem" class$="[[getClassItem(errorMessage, disabled)]]">
         <span hidden$="[[multipleClass]]">{{itemSelected.label}}</span>
         <span hidden$="[[showLabel(itemSelected, multipleClass)]]">[[label]]</span>
         <iron-icon icon="fa:angle-down"></iron-icon>
       </div>
-      <ul class$="[[showSelect]]" style$="{{getHeight(height)}}" hidden$="{{!showSelect}}">
+      <ul class$="[[showSelect]]" id="scrollregion" style$="{{getHeight(height)}}" hidden$="{{!showSelect}}">
         <template is="dom-if" if="[[search]]">
           <div class="search">
             <input type="search" value="{{filterVal::input}}">
@@ -112,6 +114,7 @@
         behaviors: [
           Polymer.IronFormElementBehavior,
           Polymer.IronValidatableBehavior,
+          Polymer.IronScrollTargetBehavior,
           SortableBehavior
         ],
         properties: {
@@ -194,7 +197,7 @@
 
         },
         showSelect: function() {
-            console.log('show Select');
+            //console.log('show Select');
         },
         ready: function() {
           this.items = this.getInitialContent();
@@ -374,7 +377,7 @@
             this.itemSelected = null;
           } else {
             for (var i = 0; i < this.arrayItemsSelected.length; i++) {
-              object.label += this.arrayItemsSelected[i].label + ',';
+              object.label += this.arrayItemsSelected[i].label + ', ';
               object.value += this.arrayItemsSelected[i].value + ',';
             }
             object.value = object.value.substring(0, object.value.length - 1);
